@@ -1,3 +1,8 @@
+2009-01-19  Naohiro Aota  <naota@elisp.net>
+
+	* w3m.el (w3m-image-anchor): Fix docstring.
+	(toplevel): Fix w3m-image-anchor-face's alias.
+
 2009-01-15  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-fontify-images): Put the 'full alt text' on new
